Faseeh -  Crawler API integrated with frontend and Crawler related backend issues resolved